[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/entities/player/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/vine-boom.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/player_jumped.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/player_landed.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 110.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -25 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_speed = 7.0

[node name="character" parent="." instance=ExtResource( 1 )]
position = Vector2( -24, -109 )
scale = Vector2( 0.14, 0.14 )

[node name="Tween" type="Tween" parent="."]

[node name="Line2D" type="Line2D" parent="."]
show_behind_parent = true
position = Vector2( -10, 58 )
default_color = Color( 0.717647, 1, 0, 1 )
gradient = SubResource( 2 )
joint_mode = 2
begin_cap_mode = 2
sharp_limit = 40.0
round_precision = 48

[node name="Line2D2" type="Line2D" parent="."]
show_behind_parent = true
position = Vector2( 6, 58 )
gradient = SubResource( 2 )
joint_mode = 2
begin_cap_mode = 2
sharp_limit = 40.0
round_precision = 48

[node name="line_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -45.0
margin_top = -136.0
margin_right = 45.0
margin_bottom = -122.0
text = "hopped_floors"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over_time" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="vine_boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="jumped" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
bus = "Sfx"

[node name="landed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0
bus = "Sfx"

[connection signal="timeout" from="line_Timer" to="." method="_on_line_Timer_timeout"]
[connection signal="timeout" from="game_over_time" to="." method="_on_game_over_time_timeout"]
